# ChangeLog for dev-db/pgpool2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/pgpool2/ChangeLog,v 1.7 2011/05/19 15:34:36 scarabeus Exp $

  19 May 2011; Tomáš Chvátal <scarabeus@gentoo.org> -pgpool2-3.0.3.ebuild:
  remove old

*pgpool2-3.0.3-r1 (17 Apr 2011)

  17 Apr 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +pgpool2-3.0.3-r1.ebuild, pgpool2-9999.ebuild:
  Fixes bug 356035

  02 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> files/pgpool2.initd:
  Update the initscript to use pgpool rather than start-stop-daemon, but it
  still does not do what i want. TBD.

*pgpool2-3.0.3 (01 Mar 2011)

  01 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> -pgpool2-3.0.2.ebuild,
  +pgpool2-3.0.3.ebuild:
  Version bump drop broken version.

*pgpool2-3.0.2 (28 Feb 2011)

  28 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/3.0.1-fix_md5_malloc.patch, -files/pgpool2-tmpdir.patch,
  -pgpool2-3.0.1.ebuild, +pgpool2-3.0.2.ebuild:
  Version bump. Drop older.

*pgpool2-9999 (09 Feb 2011)

  09 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> +pgpool2-9999.ebuild:
  Add live ebuild for testing.

*pgpool2-3.0.1 (26 Jan 2011)

  26 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/3.0.1-fix_md5_malloc.patch, +files/pgpool2-tmpdir.patch,
  +pgpool2-3.0.1.ebuild, +files/pgpool2.initd, +metadata.xml:
  Initial commit. Fixes bug #196300. Ebuild made thanks to ccss.cz.
