@@ -1,18 +1,24 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/pgpool2/Attic/pgpool2-3.0.3-r1.ebuild,v 1.1 2011/04/17 14:00:57 titanofold Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/pgpool2/Attic/pgpool2-3.0.4.ebuild,v 1.1 2011/06/19 18:50:43 scarabeus Exp $
 
 EAPI=4
 
-MY_P="${PN/2/-II}-${PV}"
-inherit autotools-utils autotools
+[[ ${PV} == 9999 ]] && MY_P=${PN/2/-II} || MY_P="${PN/2/-II}-${PV}"
+
+ECVS_SERVER="cvs.pgfoundry.org:/cvsroot/pgpool"
+ECVS_MODULE="pgpool-II"
+[[ ${PV} == 9999 ]] && SCM_ECLASS="cvs"
+inherit base autotools ${SCM_ECLASS}
+unset SCM_ECLASS
 
 DESCRIPTION="Connection pool server for PostgreSQL"
 HOMEPAGE="http://pgpool.projects.postgresql.org/"
-SRC_URI="http://pgfoundry.org/frs/download.php/2958/${MY_P}.tar.gz"
+[[ ${PV} == 9999 ]] || SRC_URI="http://pgfoundry.org/frs/download.php/3076/${MY_P}.tar.gz"
+
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+[[ ${PV} == 9999 ]] || KEYWORDS="~amd64 ~x86"
 IUSE="pam ssl static-libs"
 
 RDEPEND="
@@ -32,11 +38,12 @@ DOCS=(
 	"doc/where_to_send_queries.pdf"
 )
 HTML_DOCS=(
-	"doc/pgpool-en.html" "doc/pgpool.css"
+	"doc/pgpool-en.html"
+	"doc/pgpool.css"
 	"doc/tutorial-en.html"
 )
 
-S="${WORKDIR}/${MY_P}"
+S=${WORKDIR}/${MY_P}
 
 src_prepare() {
 	sed -i \
@@ -45,24 +52,22 @@ src_prepare() {
 	sed -i \
 		-e '/ACLOCAL_AMFLAGS/ d' \
 		Makefile.am || die
-	autotools-utils_src_prepare
+	base_src_prepare
 	eautoreconf
 }
 
 src_configure() {
-	local myeconfargs=(
-		"--sysconfdir=${EROOT}/etc/${PN}"
-		"--disable-dependency-tracking"
-		"--disable-rpath"
-		$(use_with ssl openssl)
+	econf \
+		--sysconfdir=${EROOT}/etc/${PN} \
+		--disable-rpath \
+		$(use_enable static-libs static) \
+		$(use_with ssl openssl) \
 		$(use_with pam)
-	)
-	autotools-utils_src_configure
 }
 
 src_install() {
-	autotools-utils_src_install
-	remove_libtool_files all
+	base_src_install
+	find "${ED}" -name '*.la' -exec rm -f {} +
 	# move misc data to proper folder
 	mv "${ED}/usr/share/${PN/2/-II}" "${ED}/usr/share/${PN}" || die
 
