@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/pgpool2
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/pgpool2/ChangeLog,v 1.7 2011/05/19 15:34:36 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/pgpool2/ChangeLog,v 1.8 2011/06/19 18:50:43 scarabeus Exp $
+
+*pgpool2-3.0.4 (19 Jun 2011)
+
+  19 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -pgpool2-3.0.3-r1.ebuild, +pgpool2-3.0.4.ebuild, pgpool2-9999.ebuild:
+  Sync live and release ebuild. Bump to 3.0.4. Remove older.
 
   19 May 2011; Tomáš Chvátal <scarabeus@gentoo.org> -pgpool2-3.0.3.ebuild:
   remove old
